// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`search should work 1`] = `
Object {
  "analytics": Object {
    "isCacheHit": false,
    "maxIndex": 1000,
    "minIndex": 0,
    "query": "hi",
    "resultCount": 3,
    "status": "Success",
    "wasSubjectMatch": false,
  },
  "results": Array [
    Object {
      "class": Object {
        "classId": "6182",
        "crns": Array [
          "20006",
        ],
        "desc": "This course explores the ethical and legal obligations respecting patient records, particularly electronic records. In addition to reviewing HIPAA’s privacy and security rules, the course will cover professional ethics regarding confidentiality, common law and state protections for confidentiality, GINA, and the HiTech Act. Prereq. LS 6102. 3.000 Lecture hours",
        "host": "neu.edu",
        "lastUpdateTime": 1514328389277,
        "maxCredits": 3,
        "minCredits": 3,
        "name": "Patient Records, Privacy, and Security",
        "prereqs": Object {
          "type": "and",
          "values": Array [
            Object {
              "classId": "6102",
              "subject": "LS",
            },
          ],
        },
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201752&subj_code_in=LS&crse_numb_in=6182",
        "subject": "LS",
        "termId": "201752",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201752&subj_in=LS&crse_in=6182&schd_in=%",
      },
      "score": 0.05162236973506054,
      "sections": Array [
        Object {
          "classId": "6182",
          "crn": "20006",
          "honors": false,
          "host": "neu.edu",
          "lastUpdateTime": 1514328388298,
          "meetings": Array [
            Object {
              "allProfs": Array [
                "Joshua L Abrams",
              ],
              "endDate": 17401,
              "profs": Array [
                "Joshua L Abrams",
              ],
              "startDate": 17346,
              "type": "Class",
              "where": "TBA",
            },
          ],
          "online": true,
          "seatsCapacity": 50,
          "seatsRemaining": 46,
          "subject": "LS",
          "termId": "201752",
          "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201752&crn_in=20006",
          "waitCapacity": 0,
          "waitRemaining": 0,
        },
      ],
      "type": "class",
    },
    Object {
      "class": Object {
        "classId": "6210",
        "crns": Array [],
        "desc": "Examines the legal relationship between employer and employee. Addresses issues and topics such as discrimination, affirmative action, the Americans with Disabilities Act, sexual harassment, health and safety, AIDS in the workplace, compliance issues, and legal issues related to downsizing and terminations. Today’s HR manager works in a highly complex environment with constantly changing laws and legislation that govern employee rights and employer obligations. Course content may vary from term to term. Prereq. LS 6102. 3.000 Lecture hours",
        "host": "neu.edu",
        "lastUpdateTime": 1514328277251,
        "maxCredits": 3,
        "minCredits": 3,
        "name": "Special Topics in Employee Rights and Employer Obligations",
        "prereqs": Object {
          "type": "and",
          "values": Array [
            Object {
              "classId": "6102",
              "subject": "LS",
            },
          ],
        },
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201752&subj_code_in=LS&crse_numb_in=6210",
        "subject": "LS",
        "termId": "201752",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201752&subj_in=LS&crse_in=6210&schd_in=%",
      },
      "score": 0.020980449563579882,
      "sections": Array [],
      "type": "class",
    },
    Object {
      "class": Object {
        "classId": "6181",
        "crns": Array [
          "20003",
        ],
        "desc": "This course covers major regulatory issues related to the healthcare field, providing an in-depth regulatory overview of health programs. Statutory schemes covered will include HIPAA/HITECH, Stark/fraud and abuse. In addition, students will learn about compliance programs, including compliance operations, and the code of conduct for particular fields. Prereq. LS 6102. 3.000 Lecture hours",
        "host": "neu.edu",
        "lastUpdateTime": 1514328389277,
        "maxCredits": 3,
        "minCredits": 3,
        "name": "Healthcare Regulation and Compliance",
        "prereqs": Object {
          "type": "and",
          "values": Array [
            Object {
              "classId": "6102",
              "subject": "LS",
            },
          ],
        },
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201752&subj_code_in=LS&crse_numb_in=6181",
        "subject": "LS",
        "termId": "201752",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201752&subj_in=LS&crse_in=6181&schd_in=%",
      },
      "score": 0.012570324939662014,
      "sections": Array [
        Object {
          "classId": "6181",
          "crn": "20003",
          "honors": false,
          "host": "neu.edu",
          "lastUpdateTime": 1514328388298,
          "meetings": Array [
            Object {
              "allProfs": Array [
                "Rebecca Sara Feinberg",
              ],
              "endDate": 17345,
              "profs": Array [
                "Rebecca Sara Feinberg",
              ],
              "startDate": 17294,
              "type": "Class",
              "where": "TBA",
            },
          ],
          "online": true,
          "seatsCapacity": 50,
          "seatsRemaining": 45,
          "subject": "LS",
          "termId": "201752",
          "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201752&crn_in=20003",
          "waitCapacity": 0,
          "waitRemaining": 0,
        },
      ],
      "type": "class",
    },
  ],
}
`;

exports[`search should work 2`] = `
Object {
  "analytics": Object {
    "isCacheHit": false,
    "maxIndex": 1000,
    "minIndex": 0,
    "query": "craig",
    "resultCount": 1,
    "status": "Success",
    "wasSubjectMatch": false,
  },
  "results": Array [
    Object {
      "employee": Object {
        "emails": Array [
          "c.maloney@northeastern.edu",
        ],
        "firstName": "Craig",
        "id": "001793906",
        "interests": "Modeling, simulation, and theory of nanoscale mechanics, soft matter, and glasses and amorphous materials.",
        "lastName": "Maloney",
        "name": "Craig Maloney",
        "phone": "6173736255",
        "picThumbnail": "http://www.coe.neu.edu/sites/default/files/styles/user_photo/public/portraits/mie/maloney-c.jpg?itok=G5weGTrP",
        "primaryDepartment": "Mechanical + Industrial Engineering",
        "primaryRole": "Associate Professor",
        "url": "http://www.mie.neu.edu/people/maloney-craig",
      },
      "score": 6.946649552965135,
      "type": "employee",
    },
  ],
}
`;

exports[`search should work 3`] = `
Object {
  "analytics": Object {
    "isCacheHit": false,
    "maxIndex": 1000,
    "minIndex": 0,
    "query": "experiential",
    "resultCount": 1,
    "status": "Success",
    "wasSubjectMatch": false,
  },
  "results": Array [
    Object {
      "class": Object {
        "classId": "6300",
        "crns": Array [
          "20007",
        ],
        "desc": "This course offers the opportunity to apply what students have learned in the MLS program to a relevant project in the practice setting. Working with an outside sponsor, backed up by law school faculty, a student selects and refines an applied research topic, analyzes that topic, presents useful recommendations to the project sponsor, and creates a plan to implement those recommendations. Alongside this fieldwork, students will participate in an online course that provides a platform to develop, refine and practice key business communication skills, project and client management techniques, and analytic approaches. Each student receives feedback from both the project sponsor and course faculty, reviews “lessons learned,” and employs that feedback to advance his or her career development goals and professional plan. Prereq. LS 6102. 0.000 Lecture hours",
        "host": "neu.edu",
        "lastUpdateTime": 1514328389277,
        "maxCredits": 0,
        "minCredits": 0,
        "name": "Experiential Network",
        "prereqs": Object {
          "type": "and",
          "values": Array [
            Object {
              "classId": "6102",
              "subject": "LS",
            },
          ],
        },
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201752&subj_code_in=LS&crse_numb_in=6300",
        "subject": "WS",
        "termId": "201752",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201752&subj_in=LS&crse_in=6300&schd_in=%",
      },
      "score": 2.442398285340903,
      "sections": Array [
        undefined,
      ],
      "type": "class",
    },
  ],
}
`;

exports[`search should work 4`] = `
Object {
  "analytics": Object {
    "isCacheHit": false,
    "maxIndex": 1000,
    "minIndex": 0,
    "query": "ls",
    "resultCount": 13,
    "status": "Success",
    "wasSubjectMatch": true,
  },
  "results": Array [
    Object {
      "class": Object {
        "classId": "6101",
        "crns": Array [
          "20008",
        ],
        "desc": "This course will provide students with an introduction to the American legal system and legal reasoning. The course materials will cover rights and obligations created by contracts, fundamental principles of property law, accident law, the regulation of criminal conduct, and the laws associated with business formation and relationships. Students will also complete writing exercises to enable them to synthesize their understanding, and to find and use legal sources in support of their work. 3.000 Lecture hours",
        "host": "neu.edu",
        "lastUpdateTime": 1514328389277,
        "maxCredits": 3,
        "minCredits": 3,
        "name": "Introduction to Legal Studies 1: Law and Legal Reasoning",
        "optPrereqsFor": Object {
          "values": Array [],
        },
        "prereqsFor": Object {
          "values": Array [
            Object {
              "classId": "6102",
              "subject": "LS",
            },
          ],
        },
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201752&subj_code_in=LS&crse_numb_in=6101",
        "subject": "LS",
        "termId": "201752",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201752&subj_in=LS&crse_in=6101&schd_in=%",
      },
      "score": 0,
      "sections": Array [
        Object {
          "classId": "6101",
          "crn": "20008",
          "honors": false,
          "host": "neu.edu",
          "lastUpdateTime": 1514328388298,
          "meetings": Array [
            Object {
              "allProfs": Array [
                "Wendy E Parmet",
                "Christina Sheppand Cicchitto",
              ],
              "endDate": 17345,
              "profs": Array [
                "Wendy E Parmet",
                "Christina Sheppand Cicchitto",
              ],
              "startDate": 17294,
              "type": "Class",
              "where": "TBA",
            },
          ],
          "online": true,
          "seatsCapacity": 50,
          "seatsRemaining": 43,
          "subject": "LS",
          "termId": "201752",
          "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201752&crn_in=20008",
          "waitCapacity": 0,
          "waitRemaining": 0,
        },
      ],
      "type": "class",
    },
    Object {
      "class": Object {
        "classId": "6102",
        "crns": Array [
          "20009",
        ],
        "desc": "This course builds on LS 6101 with its emphasis on common law by introducing students to statutes and regulations. The setting involves federal administrative agencies governing employment, consumer protection, environment, labor, cyberlaw, intellectual property, and international trade. Exercises and discussions require finding, summarizing, applying and arguing about the applicability of statutes and regulations in concrete situations. The capstone of the course allows students to create a project to illustrate the lessons learned in the course. Prereq. LS 6101. 3.000 Lecture hours",
        "host": "neu.edu",
        "lastUpdateTime": 1514328389277,
        "maxCredits": 3,
        "minCredits": 3,
        "name": "Introduction to Legal Studies 2",
        "optPrereqsFor": Object {
          "values": Array [],
        },
        "prereqs": Object {
          "type": "and",
          "values": Array [
            Object {
              "classId": "6101",
              "subject": "LS",
            },
          ],
        },
        "prereqsFor": Object {
          "values": Array [
            Object {
              "classId": "6110",
              "subject": "LS",
            },
            Object {
              "classId": "6120",
              "subject": "LS",
            },
            Object {
              "classId": "6130",
              "subject": "LS",
            },
            Object {
              "classId": "6140",
              "subject": "LS",
            },
            Object {
              "classId": "6150",
              "subject": "LS",
            },
            Object {
              "classId": "6180",
              "subject": "LS",
            },
            Object {
              "classId": "6181",
              "subject": "LS",
            },
            Object {
              "classId": "6182",
              "subject": "LS",
            },
            Object {
              "classId": "6210",
              "subject": "LS",
            },
            Object {
              "classId": "6211",
              "subject": "LS",
            },
            Object {
              "classId": "6212",
              "subject": "LS",
            },
            Object {
              "classId": "6230",
              "subject": "LS",
            },
            Object {
              "classId": "6300",
              "subject": "LS",
            },
          ],
        },
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201752&subj_code_in=LS&crse_numb_in=6102",
        "subject": "LS",
        "termId": "201752",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201752&subj_in=LS&crse_in=6102&schd_in=%",
      },
      "score": 0,
      "sections": Array [
        Object {
          "classId": "6102",
          "crn": "20009",
          "honors": false,
          "host": "neu.edu",
          "lastUpdateTime": 1514328388298,
          "meetings": Array [
            Object {
              "allProfs": Array [
                "Daniel Urman",
                "Christina Sheppand Cicchitto",
              ],
              "endDate": 17401,
              "profs": Array [
                "Daniel Urman",
                "Christina Sheppand Cicchitto",
              ],
              "startDate": 17346,
              "type": "Class",
              "where": "TBA",
            },
          ],
          "online": true,
          "seatsCapacity": 50,
          "seatsRemaining": 44,
          "subject": "LS",
          "termId": "201752",
          "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201752&crn_in=20009",
          "waitCapacity": 0,
          "waitRemaining": 0,
        },
      ],
      "type": "class",
    },
    Object {
      "class": Object {
        "classId": "6110",
        "crns": Array [
          "20001",
        ],
        "desc": "This course will present a comprehensive survey of procedural and evidentiary rules in the context of recordkeeping, document production, due diligence, and investigations. It will include an exploration of rights to privacy, issues of confidentiality and conflicts of interest, contractual and legal liability, evidentiary consequences in administrative and court settings resulting from work-place disputes, and other related areas. Prereq. LS 6102. 3.000 Lecture hours",
        "host": "neu.edu",
        "lastUpdateTime": 1514328389277,
        "maxCredits": 3,
        "minCredits": 3,
        "name": "Law of Information and Records",
        "prereqs": Object {
          "type": "and",
          "values": Array [
            Object {
              "classId": "6102",
              "subject": "LS",
            },
          ],
        },
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201752&subj_code_in=LS&crse_numb_in=6110",
        "subject": "LS",
        "termId": "201752",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201752&subj_in=LS&crse_in=6110&schd_in=%",
      },
      "score": 0,
      "sections": Array [
        Object {
          "classId": "6110",
          "crn": "20001",
          "honors": false,
          "host": "neu.edu",
          "lastUpdateTime": 1514328388298,
          "meetings": Array [
            Object {
              "allProfs": Array [
                "Daniel Urman",
                "Christina Sheppand Cicchitto",
              ],
              "endDate": 17345,
              "profs": Array [
                "Daniel Urman",
                "Christina Sheppand Cicchitto",
              ],
              "startDate": 17294,
              "type": "Class",
              "where": "TBA",
            },
          ],
          "online": true,
          "seatsCapacity": 50,
          "seatsRemaining": 33,
          "subject": "LS",
          "termId": "201752",
          "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201752&crn_in=20001",
          "waitCapacity": 0,
          "waitRemaining": 0,
        },
      ],
      "type": "class",
    },
    Object {
      "class": Object {
        "classId": "6120",
        "crns": Array [],
        "desc": "This course will introduce students to the implications and impact of law on strategy, with attention to applying legal knowledge and resources to strategic planning and strategy implementation. The course will use several examples of readily understood strategies to provide opportunities for students to identify the legal environment, consider the legal rights and requirements implicated by relevant law or regulation (e.g., intellectual property, contracts, administrative law) and their potential impact on management, incorporating law as a resource on the resource based view of the firm. The range of examples will include considering law and strategy implementation in multiple contexts. The focus will be on developing an appreciation of the legal environment and making effective use of legal resources and lawyers as advisors in strategic management aimed at attaining sustainable competitive advantage over rivals. Prereq. LS 6102. 3.000 Lecture hours",
        "host": "neu.edu",
        "lastUpdateTime": 1514328277251,
        "maxCredits": 3,
        "minCredits": 3,
        "name": "Law and Strategy",
        "prereqs": Object {
          "type": "and",
          "values": Array [
            Object {
              "classId": "6102",
              "subject": "LS",
            },
          ],
        },
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201752&subj_code_in=LS&crse_numb_in=6120",
        "subject": "LS",
        "termId": "201752",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201752&subj_in=LS&crse_in=6120&schd_in=%",
      },
      "score": 0,
      "sections": Array [],
      "type": "class",
    },
    Object {
      "class": Object {
        "classId": "6130",
        "crns": Array [],
        "desc": "Students will learn core elements of negotiations that are the precursors to any final agreement or resolutions of informal disputes: negotiation planning from opposing sides and counseling, analysis of the bargaining range and opponent’s needs, principled concession patterns, problem-solving strategies to avoid deadlock, information bargaining and authority clarification, principles of drafting, settlement, and ethics. Prereq. LS 6102. 3.000 Lecture hours",
        "host": "neu.edu",
        "lastUpdateTime": 1514328277251,
        "maxCredits": 3,
        "minCredits": 3,
        "name": "Negotiation and Advocacy",
        "prereqs": Object {
          "type": "and",
          "values": Array [
            Object {
              "classId": "6102",
              "subject": "LS",
            },
          ],
        },
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201752&subj_code_in=LS&crse_numb_in=6130",
        "subject": "LS",
        "termId": "201752",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201752&subj_in=LS&crse_in=6130&schd_in=%",
      },
      "score": 0,
      "sections": Array [],
      "type": "class",
    },
    Object {
      "class": Object {
        "classId": "6140",
        "crns": Array [],
        "desc": "Institutions increasingly face a host of regulatory compliance issues. This course (building on LS 6102) will cover the challenges facing organizations in building programs that ensure adherence with legal obligations. Statutes covering a broad range of areas will be explored, including health and safety, environment, financial services, consumer protection, and employment. Prereq. LS 6102. 3.000 Lecture hours",
        "host": "neu.edu",
        "lastUpdateTime": 1514328277251,
        "maxCredits": 3,
        "minCredits": 3,
        "name": "Regulation and Compliance",
        "prereqs": Object {
          "type": "and",
          "values": Array [
            Object {
              "classId": "6102",
              "subject": "LS",
            },
          ],
        },
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201752&subj_code_in=LS&crse_numb_in=6140",
        "subject": "LS",
        "termId": "201752",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201752&subj_in=LS&crse_in=6140&schd_in=%",
      },
      "score": 0,
      "sections": Array [],
      "type": "class",
    },
    Object {
      "class": Object {
        "classId": "6150",
        "crns": Array [
          "20004",
        ],
        "desc": "Students will learn the rules governing organizations, including corporations, partnerships, governmental organizations, and non-profits. The focus will include relationships within the organizations and powers of members of organizations. In addition, the course will cover employment issues relevant to relationships in organizations. Topics will include rights of workers to be free of discrimination in the workplace, the importance of workplace rules, and policies governing the workplace. Prereq. LS 6102. 3.000 Lecture hours",
        "host": "neu.edu",
        "lastUpdateTime": 1514328389277,
        "maxCredits": 3,
        "minCredits": 3,
        "name": "Law and Organizational Management",
        "prereqs": Object {
          "type": "and",
          "values": Array [
            Object {
              "classId": "6102",
              "subject": "LS",
            },
          ],
        },
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201752&subj_code_in=LS&crse_numb_in=6150",
        "subject": "LS",
        "termId": "201752",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201752&subj_in=LS&crse_in=6150&schd_in=%",
      },
      "score": 0,
      "sections": Array [
        Object {
          "classId": "6150",
          "crn": "20004",
          "honors": false,
          "host": "neu.edu",
          "lastUpdateTime": 1514328388298,
          "meetings": Array [
            Object {
              "allProfs": Array [
                "Rebecca Lynne Rausch",
              ],
              "endDate": 17401,
              "profs": Array [
                "Rebecca Lynne Rausch",
              ],
              "startDate": 17346,
              "type": "Class",
              "where": "TBA",
            },
          ],
          "online": true,
          "seatsCapacity": 50,
          "seatsRemaining": 39,
          "subject": "LS",
          "termId": "201752",
          "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201752&crn_in=20004",
          "waitCapacity": 0,
          "waitRemaining": 0,
        },
      ],
      "type": "class",
    },
    Object {
      "class": Object {
        "classId": "6160",
        "crns": Array [],
        "desc": "This course provides an introduction to the international legal concepts, principles and institutions that define and shape international business relations. Globalization has increased the number of economic interactions across national borders. The globalization of production and consumption takes place in the background of an international monetary system and an international legal infrastructure facilitating and regulating transnational trade, international finance and global intellectual property and investment protection. The course specifically examines case studies of global governance based on codes of practice, certification and other regulatory initiatives. 3.000 Lecture hours",
        "host": "neu.edu",
        "lastUpdateTime": 1514328277251,
        "maxCredits": 3,
        "minCredits": 3,
        "name": "Regulation and Global Business Strategies",
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201752&subj_code_in=LS&crse_numb_in=6160",
        "subject": "LS",
        "termId": "201752",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201752&subj_in=LS&crse_in=6160&schd_in=%",
      },
      "score": 0,
      "sections": Array [],
      "type": "class",
    },
    Object {
      "class": Object {
        "classId": "6170",
        "crns": Array [
          "20005",
        ],
        "desc": "In this course students will explore various aspects of corporate financial transactions, including vendor and supplier contracts, early stage financing, commercial loans, initial public offerings, mergers, and the sale of assets. Issues involving valuation of assets will be covered, and students will learn basic securities laws related to the transactions covered. 3.000 Lecture hours",
        "host": "neu.edu",
        "lastUpdateTime": 1514328389277,
        "maxCredits": 3,
        "minCredits": 3,
        "name": "Financial Transactions",
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201752&subj_code_in=LS&crse_numb_in=6170",
        "subject": "LS",
        "termId": "201752",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201752&subj_in=LS&crse_in=6170&schd_in=%",
      },
      "score": 0,
      "sections": Array [
        Object {
          "classId": "6170",
          "crn": "20005",
          "honors": false,
          "host": "neu.edu",
          "lastUpdateTime": 1514328388298,
          "meetings": Array [
            Object {
              "allProfs": Array [
                "Joshua S. Grinspoon",
              ],
              "endDate": 17401,
              "profs": Array [
                "Joshua S. Grinspoon",
              ],
              "startDate": 17346,
              "type": "Class",
              "where": "TBA",
            },
          ],
          "online": true,
          "seatsCapacity": 50,
          "seatsRemaining": 43,
          "subject": "LS",
          "termId": "201752",
          "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201752&crn_in=20005",
          "waitCapacity": 0,
          "waitRemaining": 0,
        },
      ],
      "type": "class",
    },
    Object {
      "class": Object {
        "classId": "6180",
        "crns": Array [],
        "desc": "This course examines legal regulations governing the provision of healthcare services. Topics include access to health insurance and healthcare, healthcare financing, the organization and responsibility of healthcare institutions (especially hospitals), healthcare cost containment policies, public and private insurance programs, and the formulation of health policy. The course will also provide an introductory overview of the major statutes, regulations, and case law related to health law, including an introduction to the Patient Protection and Affordable Care Act, otherwise known as Obamacare. Prereq. LS 6102. 3.000 Lecture hours",
        "host": "neu.edu",
        "lastUpdateTime": 1514328277251,
        "maxCredits": 3,
        "minCredits": 3,
        "name": "Health Law Survey",
        "prereqs": Object {
          "type": "and",
          "values": Array [
            Object {
              "classId": "6102",
              "subject": "LS",
            },
          ],
        },
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201752&subj_code_in=LS&crse_numb_in=6180",
        "subject": "LS",
        "termId": "201752",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201752&subj_in=LS&crse_in=6180&schd_in=%",
      },
      "score": 0,
      "sections": Array [],
      "type": "class",
    },
    Object {
      "class": Object {
        "classId": "6181",
        "crns": Array [
          "20003",
        ],
        "desc": "This course covers major regulatory issues related to the healthcare field, providing an in-depth regulatory overview of health programs. Statutory schemes covered will include HIPAA/HITECH, Stark/fraud and abuse. In addition, students will learn about compliance programs, including compliance operations, and the code of conduct for particular fields. Prereq. LS 6102. 3.000 Lecture hours",
        "host": "neu.edu",
        "lastUpdateTime": 1514328389277,
        "maxCredits": 3,
        "minCredits": 3,
        "name": "Healthcare Regulation and Compliance",
        "prereqs": Object {
          "type": "and",
          "values": Array [
            Object {
              "classId": "6102",
              "subject": "LS",
            },
          ],
        },
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201752&subj_code_in=LS&crse_numb_in=6181",
        "subject": "LS",
        "termId": "201752",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201752&subj_in=LS&crse_in=6181&schd_in=%",
      },
      "score": 0,
      "sections": Array [
        Object {
          "classId": "6181",
          "crn": "20003",
          "honors": false,
          "host": "neu.edu",
          "lastUpdateTime": 1514328388298,
          "meetings": Array [
            Object {
              "allProfs": Array [
                "Rebecca Sara Feinberg",
              ],
              "endDate": 17345,
              "profs": Array [
                "Rebecca Sara Feinberg",
              ],
              "startDate": 17294,
              "type": "Class",
              "where": "TBA",
            },
          ],
          "online": true,
          "seatsCapacity": 50,
          "seatsRemaining": 45,
          "subject": "LS",
          "termId": "201752",
          "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201752&crn_in=20003",
          "waitCapacity": 0,
          "waitRemaining": 0,
        },
      ],
      "type": "class",
    },
    Object {
      "class": Object {
        "classId": "6182",
        "crns": Array [
          "20006",
        ],
        "desc": "This course explores the ethical and legal obligations respecting patient records, particularly electronic records. In addition to reviewing HIPAA’s privacy and security rules, the course will cover professional ethics regarding confidentiality, common law and state protections for confidentiality, GINA, and the HiTech Act. Prereq. LS 6102. 3.000 Lecture hours",
        "host": "neu.edu",
        "lastUpdateTime": 1514328389277,
        "maxCredits": 3,
        "minCredits": 3,
        "name": "Patient Records, Privacy, and Security",
        "prereqs": Object {
          "type": "and",
          "values": Array [
            Object {
              "classId": "6102",
              "subject": "LS",
            },
          ],
        },
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201752&subj_code_in=LS&crse_numb_in=6182",
        "subject": "LS",
        "termId": "201752",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201752&subj_in=LS&crse_in=6182&schd_in=%",
      },
      "score": 0,
      "sections": Array [
        Object {
          "classId": "6182",
          "crn": "20006",
          "honors": false,
          "host": "neu.edu",
          "lastUpdateTime": 1514328388298,
          "meetings": Array [
            Object {
              "allProfs": Array [
                "Joshua L Abrams",
              ],
              "endDate": 17401,
              "profs": Array [
                "Joshua L Abrams",
              ],
              "startDate": 17346,
              "type": "Class",
              "where": "TBA",
            },
          ],
          "online": true,
          "seatsCapacity": 50,
          "seatsRemaining": 46,
          "subject": "LS",
          "termId": "201752",
          "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201752&crn_in=20006",
          "waitCapacity": 0,
          "waitRemaining": 0,
        },
      ],
      "type": "class",
    },
    Object {
      "class": Object {
        "classId": "6210",
        "crns": Array [],
        "desc": "Examines the legal relationship between employer and employee. Addresses issues and topics such as discrimination, affirmative action, the Americans with Disabilities Act, sexual harassment, health and safety, AIDS in the workplace, compliance issues, and legal issues related to downsizing and terminations. Today’s HR manager works in a highly complex environment with constantly changing laws and legislation that govern employee rights and employer obligations. Course content may vary from term to term. Prereq. LS 6102. 3.000 Lecture hours",
        "host": "neu.edu",
        "lastUpdateTime": 1514328277251,
        "maxCredits": 3,
        "minCredits": 3,
        "name": "Special Topics in Employee Rights and Employer Obligations",
        "prereqs": Object {
          "type": "and",
          "values": Array [
            Object {
              "classId": "6102",
              "subject": "LS",
            },
          ],
        },
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201752&subj_code_in=LS&crse_numb_in=6210",
        "subject": "LS",
        "termId": "201752",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201752&subj_in=LS&crse_in=6210&schd_in=%",
      },
      "score": 0,
      "sections": Array [],
      "type": "class",
    },
  ],
}
`;

exports[`search should work 5`] = `
Object {
  "analytics": Object {
    "isCacheHit": false,
    "maxIndex": 1000,
    "minIndex": 0,
    "query": "ws",
    "resultCount": 4,
    "status": "Success",
    "wasSubjectMatch": true,
  },
  "results": Array [
    Object {
      "class": Object {
        "classId": "6211",
        "crns": Array [],
        "desc": "This course will provide an overview of antidiscrimination laws governing the workplace. The focus will be on discrimination based on race and sex, but some attention will also be given to discrimination based on other characteristics, including age, sexual orientation, and disability. In addition to general issues of discrimination, the course will focus on the specific topics of retaliation, harassment, and bullying in the workplace. Prereq. LS 6102. 3.000 Lecture hours",
        "host": "neu.edu",
        "lastUpdateTime": 1514328277251,
        "maxCredits": 3,
        "minCredits": 3,
        "name": "Antidiscrimination Law",
        "prereqs": Object {
          "type": "and",
          "values": Array [
            Object {
              "classId": "6102",
              "subject": "LS",
            },
          ],
        },
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201752&subj_code_in=LS&crse_numb_in=6211",
        "subject": "WS",
        "termId": "201752",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201752&subj_in=LS&crse_in=6211&schd_in=%",
      },
      "score": 0,
      "sections": Array [],
      "type": "class",
    },
    Object {
      "class": Object {
        "classId": "6212",
        "crns": Array [
          "20002",
        ],
        "desc": "This course will cover topics related to wage and hour laws (federal and state), ERISA (pensions), health insurance benefits, the Affordable Care Act, and disability insurance. Prereq. LS 6102. 3.000 Lecture hours",
        "host": "neu.edu",
        "lastUpdateTime": 1514328389277,
        "maxCredits": 3,
        "minCredits": 3,
        "name": "Wages and Benefits",
        "prereqs": Object {
          "type": "and",
          "values": Array [
            Object {
              "classId": "6102",
              "subject": "LS",
            },
          ],
        },
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201752&subj_code_in=LS&crse_numb_in=6212",
        "subject": "WS",
        "termId": "201752",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201752&subj_in=LS&crse_in=6212&schd_in=%",
      },
      "score": 0,
      "sections": Array [
        undefined,
      ],
      "type": "class",
    },
    Object {
      "class": Object {
        "classId": "6230",
        "crns": Array [],
        "desc": "In our modern day “information economy,” the law of intellectual property (IP) has taken on enormous importance to both creators and users of creative works. Such IP Law is the way we provide legal protection to encourage invention and creativity by guaranteeing an opportunity for financial return to the originator of novel work. This course introduces students to the classic principles of copyright, patent, trademark, and trade secret law and explores the ways in which those principles are shifting and adapting in response to new technology. Prereq. LS 6102. 3.000 Lecture hours",
        "host": "neu.edu",
        "lastUpdateTime": 1514328277251,
        "maxCredits": 3,
        "minCredits": 3,
        "name": "Intellectual Property Survey",
        "prereqs": Object {
          "type": "and",
          "values": Array [
            Object {
              "classId": "6102",
              "subject": "LS",
            },
          ],
        },
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201752&subj_code_in=LS&crse_numb_in=6230",
        "subject": "WS",
        "termId": "201752",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201752&subj_in=LS&crse_in=6230&schd_in=%",
      },
      "score": 0,
      "sections": Array [],
      "type": "class",
    },
    Object {
      "class": Object {
        "classId": "6300",
        "crns": Array [
          "20007",
        ],
        "desc": "This course offers the opportunity to apply what students have learned in the MLS program to a relevant project in the practice setting. Working with an outside sponsor, backed up by law school faculty, a student selects and refines an applied research topic, analyzes that topic, presents useful recommendations to the project sponsor, and creates a plan to implement those recommendations. Alongside this fieldwork, students will participate in an online course that provides a platform to develop, refine and practice key business communication skills, project and client management techniques, and analytic approaches. Each student receives feedback from both the project sponsor and course faculty, reviews “lessons learned,” and employs that feedback to advance his or her career development goals and professional plan. Prereq. LS 6102. 0.000 Lecture hours",
        "host": "neu.edu",
        "lastUpdateTime": 1514328389277,
        "maxCredits": 0,
        "minCredits": 0,
        "name": "Experiential Network",
        "prereqs": Object {
          "type": "and",
          "values": Array [
            Object {
              "classId": "6102",
              "subject": "LS",
            },
          ],
        },
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201752&subj_code_in=LS&crse_numb_in=6300",
        "subject": "WS",
        "termId": "201752",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201752&subj_in=LS&crse_in=6300&schd_in=%",
      },
      "score": 0,
      "sections": Array [
        undefined,
      ],
      "type": "class",
    },
  ],
}
`;
